[project]
name = "iedb"
version = "2.0.0"
description = "IEDB - Intelligent Enterprise Database"
authors = [
    {name = "Niranjoy Yengkhom", email = "niranjoyy@gmail.com"},
]
maintainers = [
    {name = "Niranjoy Yengkhom", email = "niranjoyy@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["database", "blockchain", "encryption", "API", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Database",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "cryptography>=41.0.7",
    "python-jose[cryptography]>=3.3.0",
]

[project.scripts]
iedb-cli = "src.iedb_cli:main"

[project.urls]
"Homepage" = "https://github.com/Niranjoyyengkhom/Blockdb-1.2"
"Bug Tracker" = "https://github.com/Niranjoyyengkhom/Blockdb-1.2/issues"
"Documentation" = "https://github.com/Niranjoyyengkhom/Blockdb-1.2/wiki"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]
ui = [
    "streamlit>=1.26.0",
]
packaging = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
